[package]
name = "wa-interact"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wa-monitor = { path = "../wa-monitor" }
libc = "0.2.65"
structopt = "0.3.3"
env_logger = "0.7.1"
log = "0.4.8"
