[package]
name = "wa-monitor"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
log = "0.4.8"
structopt = "0.3.3"
env_logger = "0.7.0"
num-derive = "0.3.0"
num-traits = "0.2.8"
thiserror = "1.0.2"
