[package]
name = "wa-server"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wa-monitor = { path = "../wa-monitor" }
thiserror = "1.0.2"
num-traits = "0.2.8"
serde_json = "1.0.41"
log = "0.4.8"
redis = "0.13.0"
lazy_static = "1.4.0"
r2d2 = "0.8.5"
r2d2_redis = "0.11.0"
serde = "1.0.101"
