[package]
name = "wa-server2"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wa-monitor = { path = "../wa-monitor" }
thiserror = "1.0.2"
r2d2_redis = "0.12.0"
r2d2 = "0.8.5"
redis = "0.13.0"
num-traits = "0.2.8"
serde_json = "1.0.41"
log = "0.4.8"
crossbeam-channel = "0.3.9"
serde = "1.0.101"
lazy_static = "1.4.0"
env_logger = "0.7.1"
